--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">+
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- my css -->
     <link rel="stylesheet" href="css/style.css">
@@ -17,12 +17,9 @@
 <body>
 
     <div id="container-card">
-        <div class="card">
-            <div class="card-body">
-                    This is some text within a card body.
-            </div>
-        </div>
     </div>
+
+
 
 
 
